import { describe, expect, it } from 'vitest';
import { compose, countLines, formatLocalDate, LONG_FILE_LINES } from '../src/builder/compose';
import { emptySelection } from '../src/builder/selection';
import { library } from './fixtures';

const DATE = '2026-10-01';
const full = { focusAreas: ['backend', 'qa'], context: 'legacy', stack: ['go', 'pytest'] };

const EXPECTED_FULL = [
  '# AGENTS.md',
  '',
  '<!-- Generated by agentsprofiles.com on 2026-10-01. Edit to fit your repo. -->',
  '',
  '## Project context',
  '',
  'Legacy summary.',
  '',
  '## Commands',
  '',
  '- Install: `<install command>`',
  '- Build: `go build ./...`',
  '- Test (Go): `go test ./...`',
  '- Test (pytest): `pytest`',
  '- Lint: `<lint command>`',
  '',
  '## Working rules',
  '',
  '- Read code first.',
  '- Run tests.',
  '- Smallest change.',
  '',
  '## Area-specific guidance',
  '',
  '### APIs and backend',
  '',
  'When changing APIs or server-side code:',
  '',
  '- Validate input.',
  '- Run tests.',
  '',
  '#### Ask first',
  '',
  '- Change API.',
  '',
  '### Testing',
  '',
  'When writing tests or fixing bugs:',
  '',
  '- Test behavior.',
  '- Validate input.',
  '',
  '## Stack guidelines',
  '',
  '### Go',
  '',
  '- Handle errors.',
  '',
  '### pytest',
  '',
  '- Use fixtures.',
  '',
  '## Boundaries',
  '',
  '### Never',
  '',
  '- Do not push.',
  '- Do not refactor.',
  '',
].join('\n');

describe('compose', () => {
  it('renders a full selection', () => {
    expect(compose(full, library, DATE)).toBe(EXPECTED_FULL);
  });

  it('includes selected working preferences and leaves them out by default', () => {
    const md = compose(
      {
        ...full,
        preferences: { simplifiedEnglish: true, comments: 'minimal', tdd: true },
      },
      library,
      DATE,
    );
    expect(md).toContain('## Working preferences');
    expect(md).toContain('- Write using ASD-STE100 simplified technical English.');
    expect(md).toContain('- Keep code comments minimal. Explain only non-obvious intent.');
    expect(md).toContain(
      'Write a failing test before implementation. Run it to confirm the expected failure.',
    );
    expect(md).toContain('Refactor while keeping tests green.');
    expect(compose(full, library, DATE)).not.toContain('## Working preferences');
  });

  it.each(['minimal', 'none'] as const)(
    'overrides default comment guidance with %s',
    (comments) => {
      const commentLibrary = {
        ...library,
        base: {
          ...library.base,
          rules: [
            ...library.base.rules,
            {
              text: 'Add comments only for intent that the code does not show.',
              not: [],
              only: [],
            },
          ],
        },
        tech: library.tech.map((tech) => ({
          ...tech,
          body: {
            ...tech.body,
            rules: [
              ...tech.body.rules,
              { text: 'Add `///` doc comments to public APIs.', not: [], only: [] },
            ],
          },
        })),
      };
      const md = compose(
        {
          ...full,
          preferences: { simplifiedEnglish: false, comments, tdd: false },
        },
        commentLibrary,
        DATE,
      );
      expect(md).not.toContain('Add comments only for intent');
      expect(md).not.toContain('Add `///` doc comments');
      expect(md).not.toContain('ASD-STE100');
      expect(md).not.toContain('test-driven development');
      expect(md).toContain(
        comments === 'none' ? '- Do not add code comments.' : '- Keep code comments minimal.',
      );
      expect(compose(full, commentLibrary, DATE)).toContain(
        'Add `///` doc comments to public APIs.',
      );
    },
  );

  it('gives the same output for any input order', () => {
    const shuffled = { focusAreas: ['qa', 'backend'], context: 'legacy', stack: ['pytest', 'go'] };
    expect(compose(shuffled, library, DATE)).toBe(EXPECTED_FULL);
  });

  it('applies not-conditions', () => {
    const mvp = { ...full, context: 'mvp' };
    expect(compose(mvp, library, DATE)).toContain('- Refactor freely.');
    expect(compose(full, library, DATE)).not.toContain('Refactor freely.');
  });

  it('applies only-conditions', () => {
    const withPg = (context: string | null) => ({ ...full, context, stack: ['postgresql'] });
    expect(compose(withPg('legacy'), library, DATE)).toContain('- Only in legacy.');
    expect(compose(withPg('mvp'), library, DATE)).not.toContain('Only in legacy.');
    expect(compose(withPg(null), library, DATE)).not.toContain('Only in legacy.');
  });

  it('renders placeholders for an empty selection', () => {
    const md = compose(emptySelection(), library, DATE);
    expect(md).toContain('<select a project context>');
    expect(md).not.toContain('## Area-specific guidance');
    expect(md).toContain('<select at least one technology>');
    expect(md).toContain('- Install: `<install command>`');
    expect(md).toContain('- Build: `<build command>`');
    expect(md).toContain('- Test: `<test command>`');
    expect(md).toContain('- Lint: `<lint command>`');
    expect(md).not.toContain('- Format:');
    expect(md).not.toContain('- Run:');
    expect(md).toContain('### Never\n\n- Do not push.');
  });

  it('renders a single tech command without a label', () => {
    expect(compose({ ...full, stack: ['go'] }, library, DATE)).toContain('- Test: `go test ./...`');
  });

  it('leaves out Boundaries when no boundary bullets apply', () => {
    const noBoundaries = {
      ...library,
      base: { ...library.base, never: [] },
    };
    const md = compose(
      { focusAreas: ['backend'], context: 'mvp', stack: ['go'] },
      noBoundaries,
      DATE,
    );
    expect(md).not.toContain('## Boundaries');
    expect(md).toContain('#### Ask first\n\n- Change API.');
  });

  it('keeps all focus-area boundaries within their task scope', () => {
    const scopedLibrary = {
      ...library,
      focusAreas: library.focusAreas.map((area) => ({
        ...area,
        body: {
          ...area.body,
          always: [{ text: 'Record the check.', not: [], only: [] }],
          never: [{ text: 'Do not weaken checks.', not: [], only: [] }],
        },
      })),
    };
    const md = compose(full, scopedLibrary, DATE);
    const [scoped, global] = md.split('## Boundaries');
    expect(scoped).toContain('When changing APIs or server-side code:');
    expect(scoped).toContain('#### Always\n\n- Record the check.');
    expect(scoped).toContain('#### Ask first\n\n- Change API.');
    expect(scoped).toContain('#### Never\n\n- Do not weaken checks.');
    expect(global).not.toContain('Record the check.');
    expect(global).not.toContain('Change API.');
    expect(global).not.toContain('Do not weaken checks.');
    expect(md.match(/- Validate input\./g)).toHaveLength(2);
  });

  it('renders a focus area whose rules are filtered out but whose boundaries apply', () => {
    const boundaryLibrary = {
      ...library,
      focusAreas: library.focusAreas.map((area) => ({
        ...area,
        body: { ...area.body, rules: area.body.rules.map((rule) => ({ ...rule, only: ['mvp'] })) },
      })),
    };
    const md = compose(full, boundaryLibrary, DATE);
    expect(md).toContain('### APIs and backend\n\nWhen changing APIs or server-side code:');
    expect(md).toContain('#### Ask first\n\n- Change API.');
    expect(md).not.toContain('### Testing');
    expect(md).not.toContain('- Validate input.');
  });

  it('preserves custom Markdown and normalizes line endings in output', () => {
    const md = compose(
      {
        ...full,
        customInstructions:
          ' \r\n- Use minor units.\r\n\r\n```text\r\n  keep indentation\r\n```\r\n ',
      },
      library,
      DATE,
    );
    expect(md).toContain(
      '## Project-specific instructions\n\n- Use minor units.\n\n```text\n  keep indentation\n```\n',
    );
    expect(md).not.toContain('\r');
  });

  it('omits empty custom instructions', () => {
    for (const customInstructions of [undefined, '', ' \n\t ']) {
      expect(compose({ ...full, customInstructions }, library, DATE)).not.toContain(
        '## Project-specific instructions',
      );
    }
  });

  it('ends with exactly one newline', () => {
    expect(compose(full, library, DATE).endsWith('\n')).toBe(true);
    expect(compose(full, library, DATE).endsWith('\n\n')).toBe(false);
  });

  it.each([
    ['mvp backend postgresql', { focusAreas: ['backend'], context: 'mvp', stack: ['postgresql'] }],
    ['legacy qa cpp', { focusAreas: ['qa'], context: 'legacy', stack: ['cpp'] }],
    ['focus areas only', { focusAreas: ['backend', 'qa'], context: null, stack: [] }],
  ])('matches snapshot: %s', (_, selection) => {
    expect(compose(selection, library, DATE)).toMatchSnapshot();
  });
});

describe('countLines', () => {
  it('counts lines without the final newline', () => {
    expect(countLines('a\nb\n')).toBe(2);
    expect(countLines('a')).toBe(1);
    expect(countLines('')).toBe(0);
  });

  it('uses a 200 line threshold', () => {
    expect(LONG_FILE_LINES).toBe(200);
  });
});

describe('formatLocalDate', () => {
  it('uses local date fields, not UTC', () => {
    expect(formatLocalDate(new Date(2026, 9, 1, 23, 59))).toBe('2026-10-01');
    expect(formatLocalDate(new Date(2026, 0, 5, 0, 1))).toBe('2026-01-05');
  });
});
