// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compose > matches snapshot: focus areas only 1`] = `
"# AGENTS.md

<!-- Generated by agentsprofiles.com on 2026-10-01. Edit to fit your repo. -->

## Project context

<select a project context>

## Commands

- Install: \`<install command>\`
- Build: \`<build command>\`
- Test: \`<test command>\`
- Lint: \`<lint command>\`

## Working rules

- Read code first.
- Run tests.

## Area-specific guidance

### APIs and backend

When changing APIs or server-side code:

- Validate input.
- Run tests.

#### Ask first

- Change API.

### Testing

When writing tests or fixing bugs:

- Test behavior.
- Validate input.

## Stack guidelines

<select at least one technology>

## Boundaries

### Never

- Do not push.
"
`;

exports[`compose > matches snapshot: legacy qa cpp 1`] = `
"# AGENTS.md

<!-- Generated by agentsprofiles.com on 2026-10-01. Edit to fit your repo. -->

## Project context

Legacy summary.

## Commands

- Install: \`<install command>\`
- Build: \`<build command>\`
- Test: \`<test command>\`
- Lint: \`<lint command>\`

## Working rules

- Read code first.
- Run tests.
- Smallest change.

## Area-specific guidance

### Testing

When writing tests or fixing bugs:

- Test behavior.
- Validate input.

## Stack guidelines

### C++

- Use RAII.

## Boundaries

### Never

- Do not push.
- Do not refactor.
"
`;

exports[`compose > matches snapshot: mvp backend postgresql 1`] = `
"# AGENTS.md

<!-- Generated by agentsprofiles.com on 2026-10-01. Edit to fit your repo. -->

## Project context

MVP summary.

## Commands

- Install: \`<install command>\`
- Build: \`<build command>\`
- Test: \`<test command>\`
- Lint: \`<lint command>\`

## Working rules

- Read code first.
- Run tests.
- Keep it simple.

## Area-specific guidance

### APIs and backend

When changing APIs or server-side code:

- Validate input.
- Run tests.

#### Ask first

- Change API.

## Stack guidelines

### PostgreSQL

- Use migrations.

## Boundaries

### Never

- Do not push.
"
`;
